<resources>
    <string name="app_name">Replikler</string>

    <string name="app_contact">bize yazın</string>
    <string name="app_copyright">Uygulamadaki repliklerden telif ihalili söz konusu olan içerikler için anasayfaya gidip sağ üst köşede yer alan <b><u>Bize Yazın</u></b> kısmını kullanarak bilgilendirebilirsiniz. 3 iş günü içinde içerikler uygulamadan kaldırılacaktır.</string>
    <string name="app_about">Uygulama dizi ve film repliklerinin seslendirmelerini içermektedir. Mesajlaşma esnasında arkadaşlarınıza bu replikleri gönderebilirsiniz. Paylaşmak istediğiniz uygulamanın telefonunuzda yüklü olduğundan lütfen emin olun.</string>
    <string name="app_about_2dn"><b>TarxSoft</b>"'"un diğer uygulamaları için aşağıdaki logoya tıklayabilirsiniz.</string>


    <string name="contact_head">bize yazın</string>
    <string name="contact_form_name">İsim</string>
    <string name="contact_form_email">Mail</string>
    <string name="contact_form_subject">Konu</string>
    <string name="contact_form_message">Mesaj</string>
    <string name="contact_form_button">Gönder</string>
    <string name="contact_form_post_message">Lütfen Bekleyin! Mesajınızı ilgili departmana iletiyoruz.</string>
    <string name="contact_posted">Mesajınız başarılı bir şekilde iletildi.</string>

    <string name="connection_button_text">Bağlanmayı Dene</string>
    <string name="connection_head_text">Hay Aksi!</string>
    <string name="connection_text">İntenet bağlantısını kontrol ediniz.</string>

    <string name="permission_button_text">İzin Ver</string>
    <string name="permission_again_button_text">Tekrar Dene</string>
    <string name="permission_head_text">İzin Verilmedi!</string>
    <string name="permission_text">Lütfen kayıt yeri (depolama) iznini açınız. Replikleri indirip, paylaşabilmeniz için gereklidir.</string>

    <string name="adapter_dialog_options_head_text">Seçenekler</string>

    <string name="about_head">hakkında</string>

    <string name="copyright_head">telif hakkı</string>

</resources>