<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20sp"
    android:background="@drawable/connection_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_permission"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_head_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_text"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="15sp"
        android:textStyle="normal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10sp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5sp"
                android:layout_weight="0.5">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <Button
                    android:id="@+id/permissionButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_button_text"
                    android:background="@drawable/connection_button_bg"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textAllCaps="true" />
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5sp"
                android:layout_weight="0.5">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <Button
                    android:id="@+id/againButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_again_button_text"
                    android:background="@drawable/connection_button_bg"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:textAllCaps="true" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>