<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ContactActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:gravity="left|top"
                android:layout_margin="10sp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/backImageButton"
                    android:onClick="backImageButton"
                    android:layout_alignParentLeft="true"
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:src="@drawable/ic_backbutton"></ImageView>
                <TextView
                    android:id="@+id/contactHead"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/contact_head"
                    android:textColor="@color/white"
                    android:textSize="25sp"></TextView>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:gravity="center"
        android:padding="10sp"
        android:layout_weight="0.65">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp"
            android:background="@drawable/bordersolid"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13sp"
                android:hint="@string/contact_form_name"
                android:fontFamily="@font/nunitoregular"
                app:endIconCheckable="true"
                android:id="@+id/nameContact"
                app:placeholderTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:counterOverflowTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:errorTextColor="@color/white"
                app:endIconMode="custom"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13sp"
                android:hint="@string/contact_form_email"
                android:fontFamily="@font/nunitoregular"
                app:endIconCheckable="true"
                android:id="@+id/emailContact"
                app:endIconDrawable="@android:drawable/sym_action_email"
                app:placeholderTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:counterOverflowTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:errorTextColor="@color/white"
                app:endIconMode="custom"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13sp"
                android:hint="@string/contact_form_subject"
                android:fontFamily="@font/nunitoregular"
                app:endIconCheckable="true"
                android:id="@+id/subjectContact"
                app:endIconDrawable="@android:drawable/stat_notify_chat"
                app:placeholderTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:counterOverflowTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:errorTextColor="@color/white"
                app:endIconMode="custom"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="130sp"
                android:layout_marginBottom="13sp"
                android:hint="@string/contact_form_message"
                android:fontFamily="@font/nunitoregular"
                app:endIconCheckable="true"
                android:id="@+id/messageContact"
                app:placeholderTextColor="@color/white"
                app:counterTextColor="@color/white"
                app:counterOverflowTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeErrorColor="@color/white"
                app:errorTextColor="@color/white"
                app:endIconMode="custom"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:gravity="center|top"
        android:layout_weight="0.1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10sp"
            android:orientation="vertical">
            <Button
                android:id="@+id/sendContactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/nunitolight"
                android:text="@string/contact_form_button"
                android:textAllCaps="true"
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.15">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/logotarxsoft"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>